--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,18 +73,20 @@ flutter:
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: yekan
+      fonts:
+        - asset: assets/fonts/Yekan_Bakh_FaNum_Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Yekan_Bakh_Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Yekan_Bakh_FaNum_Bold.ttf
+          weight: 800
+
+    - family: yekanEn
+      fonts:
+        - asset: assets/fonts/Yekan_Bakh_Fa_En_Medium.ttf
+          weight: 500
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
